# storage/api-docs/api-docs.json
@@ -6,237 +6,6 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/rag/upload": {
-            "post": {
-                "tags": [
-                    "RAG"
-                ],
-                "summary": "Upload a document",
-                "operationId": "f08436f40fe519709f95d567a7b50734",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "multipart/form-data": {
-                            "schema": {
-                                "required": [
-                                    "file"
-                                ],
-                                "properties": {
-                                    "file": {
-                                        "description": "Document file to upload",
-                                        "type": "string",
-                                        "format": "binary"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Document uploaded successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "success": {
-                                            "type": "boolean",
-                                            "example": true
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "File uploaded successfully"
-                                        },
-                                        "document_id": {
-                                            "type": "string",
-                                            "format": "uuid",
-                                            "example": "123e4567-e89b-12d3-a456-426614174000"
-                                        },
-                                        "chunks_stored": {
-                                            "type": "integer",
-                                            "example": 10
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/document/{id}/update": {
-            "post": {
-                "tags": [
-                    "RAG"
-                ],
-                "summary": "Update a document",
-                "operationId": "38ba512acb9ba10480e55964c58bf00d",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "multipart/form-data": {
-                            "schema": {
-                                "required": [
-                                    "file"
-                                ],
-                                "properties": {
-                                    "file": {
-                                        "description": "Document file to upload",
-                                        "type": "string",
-                                        "format": "binary"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Document updated successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "success": {
-                                            "type": "boolean",
-                                            "example": true
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "File updated successfully"
-                                        },
-                                        "document_id": {
-                                            "type": "string",
-                                            "format": "uuid",
-                                            "example": "123e4567-e89b-12d3-a456-426614174000"
-                                        },
-                                        "chunks_stored": {
-                                            "type": "integer",
-                                            "example": 10
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/document/{id}": {
-            "delete": {
-                "tags": [
-                    "RAG"
-                ],
-                "summary": "Delete a document",
-                "operationId": "a94f6a09ab12b265a5c3fadfb771ea9e",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Document ID",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "format": "uuid"
-                        }
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "Document deleted successfully"
-                    }
-                }
-            }
-        },
-        "/api/document": {
-            "get": {
-                "tags": [
-                    "RAG"
-                ],
-                "summary": "Get all documents",
-                "operationId": "cd91ed723181625b2f8ce2009b6f2d02",
-                "responses": {
-                    "200": {
-                        "description": "A list of documents",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/Document"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/rag/ask": {
-            "get": {
-                "tags": [
-                    "RAG"
-                ],
-                "summary": "Ask a question about a document",
-                "operationId": "91985faf2d237fed5540de598d233e22",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "query",
-                                    "document_id"
-                                ],
-                                "properties": {
-                                    "query": {
-                                        "type": "string",
-                                        "example": "What is the capital of France?"
-                                    },
-                                    "document_id": {
-                                        "type": "string",
-                                        "example": "12345"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "An answer to the question",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "answer": {
-                                            "type": "string",
-                                            "example": "The capital of France is Paris."
-                                        },
-                                        "document_id": {
-                                            "type": "string",
-                                            "example": "12345"
-                                        },
-                                        "context_used": {
-                                            "type": "array",
-                                            "items": {
-                                                "type": "string"
-                                            }
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/authenticate": {
             "post": {
                 "tags": [
@@ -362,58 +131,6 @@
     },
     "components": {
         "schemas": {
-            "DocChunk": {
-                "required": [
-                    "document_id",
-                    "chunk_text"
-                ],
-                "properties": {
-                    "document_id": {
-                        "description": "Document ID",
-                        "type": "string",
-                        "format": "uuid"
-                    },
-                    "chunk_text": {
-                        "description": "Chunk text",
-                        "type": "string"
-                    },
-                    "embedding_vector": {
-                        "description": "Embedding vector",
-                        "type": "array",
-                        "items": {
-                            "type": "number"
-                        }
-                    },
-                    "metadata": {
-                        "description": "Metadata",
-                        "type": "object"
-                    }
-                },
-                "type": "object"
-            },
-            "Document": {
-                "required": [
-                    "id",
-                    "name",
-                    "type"
-                ],
-                "properties": {
-                    "id": {
-                        "description": "Document ID",
-                        "type": "string",
-                        "format": "uuid"
-                    },
-                    "name": {
-                        "description": "Document name",
-                        "type": "string"
-                    },
-                    "type": {
-                        "description": "Document type",
-                        "type": "string"
-                    }
-                },
-                "type": "object"
-            },
             "User": {
                 "required": [
                     "name",
@@ -454,10 +171,6 @@
         }
     },
     "tags": [
-        {
-            "name": "RAG",
-            "description": "APIs RAG"
-        },
         {
             "name": "Authentication",
             "description": "Authentication"
